--- a/proyecto_planning_travel/requirements.txt
+++ b/proyecto_planning_travel/requirements.txt
@@ -1,38 +1,38 @@
-apt-clone==0.3.0
-apturl==1.0.0
-asgiref==3.4.1
-attrs==21.2.0
-beautifulsoup4==4.9.3
+apt-clone==0.2.1
+apturl==0.5.2
+asgiref==3.7.2
+attrs==23.2.0
+beautifulsoup4==4.10.0
 blinker==1.4
-Brlapi==0.8.5
-certifi==2023.5.30
-cffi==1.15.0
+Brlapi==0.8.3
+certifi==2024.2.2
+cffi==1.16.0
 chardet==4.0.0
-click==8.0.2
+click==8.0.3
 colorama==0.4.4
 command-not-found==0.3
-configobj==5.1.1
-cryptography==36.0.1
+configobj==5.0.6
+cryptography==3.4.8
 cupshelpers==1.0
 dbus-python==1.2.18
 defer==1.0.6
-defusedxml==0.7.1
+defusedxml==0.8.0rc2
 distlib==0.3.4
 distro==1.7.0
-dj-database-url==3.0.0
-Django==4.0.1
-django-filter==2.4.0
-djangorestframework==3.14.2
+dj-database-url==2.2.0
+Django==5.0b1
+django-filter==24.1
+djangorestframework==3.14.0
 exceptiongroup==1.2.0
-eyeD3==0.9.7
-filelock==3.3.1
-grpcio==1.43.0
+eyeD3==0.8.10
+filelock==3.6.0
+grpcio==1.30.2
 h11==0.14.0
 httplib2==0.20.2
 idna==3.3
 ifaddr==0.1.7
-IMDbPY==2022.5.1
-importlib-metadata==5.5.0
+IMDbPY==2021.4.18
+importlib-metadata==4.6.4
 jeepney==0.7.1
 keyring==23.5.0
 launchpadlib==1.10.16
@@ -40,52 +40,54 @@ lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
 louis==3.20.0
 macaroonbakery==1.3.1
-Mako==1.1.5
-Markdown==3.3.4
-MarkupSafe==2.1.2
+Mako==1.1.3
+Markdown==3.5.2
+MarkupSafe==2.0.1
 more-itertools==8.10.0
 nemo-emblems==5.8.0
 netaddr==0.8.0
 netifaces==0.11.0
 oauthlib==3.2.0
 onboard==1.4.1
-outcome==1.3.2
-packaging==22.0
+outcome==1.3.0.post0
+packaging==21.3
+PAM==0.4.2
+pexpect==4.8.0
 Pillow==9.0.1
 platformdirs==2.5.1
-protobuf==3.19.4
-psutil==5.9.1
+protobuf==3.12.4
+psutil==5.9.0
 ptyprocess==0.7.0
 pycairo==1.20.1
 pycparser==2.21
-pycups==1.9.73
+pycups==2.0.1
 pycurl==7.44.1
 pyelftools==0.27
 PyGObject==3.42.1
-PyICU==2.10.3
+PyICU==2.8.1
 pyinotify==0.9.6
 PyJWT==2.8.0
 pymacaroons==0.13.0
 PyNaCl==1.5.0
-pyparsing==3.0.6
+pyparsing==2.4.7
 pyparted==3.11.7
 pyRFC3339==1.1
 PySocks==1.7.1
-python-apt==2.2.0
-python-debian==0.1.43
+python-apt==2.4.0+ubuntu2
+python-debian==0.1.43+ubuntu1.1
 python-gnupg==0.4.8
 python-magic==0.4.24
-python-xlib==0.31
+python-xlib==0.29
 python3-openid==3.2.0
 pytz==2022.1
 pyxdg==0.27
-PyYAML==6.0
+PyYAML==5.4.1
 reportlab==3.6.8
-requests==2.26.0
-requests-file==1.6.0
-requests-oauthlib==2.1.1
-SecretStorage==3.5.3
-selenium==4.1.0
+requests==2.25.1
+requests-file==1.5.1
+requests-oauthlib==2.0.0
+SecretStorage==3.3.1
+selenium==4.19.0
 setproctitle==1.2.2
 six==1.16.0
 sniffio==1.3.1
@@ -93,24 +95,24 @@ social-auth-app-django==5.4.1
 social-auth-core==4.5.4
 sortedcontainers==2.4.0
 soupsieve==2.3.1
-sqlparse==0.4.2
+sqlparse==0.4.4
 systemd-python==234
-tinycss2==1.1.0
-tldextract==3.2.1
-trio==0.21.0
-trio-websocket==0.11.0
-typing-extensions==4.1.1
+tinycss2==1.1.1
+tldextract==3.1.2
+trio==0.25.0
+trio-websocket==0.11.1
+typing_extensions==4.11.0
 ubuntu-drivers-common==0.0.0
-ufw==0.36.0
+ufw==0.36.1
 Unidecode==1.3.3
-urllib3==1.26.6
+urllib3==1.26.5
 vboxapi==1.0
-virtualenv==22.8.0
+virtualenv==20.13.0+ds
 wadllib==1.3.6
 webencodings==0.5.1
 wsproto==1.2.0
-xdg==5.0
+xdg==5
 xkit==0.0.0
-xlrd==2.0.1
-youtube-dl==2022.3.6
-zipp==6.2.1
+xlrd==1.2.0
+youtube-dl==2021.12.17
+zipp==1.0.0
